dokumen with @vercel/postgres database

--- a/app/dashboard/styles.module.css
+++ b/app/dashboard/styles.module.css
@@ -9,7 +9,7 @@
     padding: 4px;
   }
   
-  #table tr:nth-child(even){background-color: #f2f2f2;}
+  #table tr:nth-child(even){background-color: #fcfafa;}
   
   #table tr:hover {background-color: #bed8f5;}
   
