--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,10 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --chart-6: 50 87% 67%;
+    --chart-7: 214.33 100% 59.22%;
+    --chart-8: 4.48 93.16% 48.02%;
+    --chart-9: 80 87% 67%;
     --radius: 0.5rem;
     --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
